fix: RESTful API 수정